# subniri

./: .pre-commit-config.yaml  Cargo.toml  build.rs  flake.nix  result  style.css
.cargo/: config.toml
assets/: resources.xml
crates/bar/: Cargo.toml  build.rs
crates/bar/assets/: resources.xml
crates/bar/src/: dbus.rs  lib.rs  main.rs
crates/bar/src/bar/: bar.blp  bluetooth.rs  clock.rs  mod.rs  network.rs  overview.rs  volume.rs
crates/bar/src/bar/mediaplayer/: button_state.rs  mediaplayer.blp  mod.rs  single_media_player.blp  single_media_player.rs  widget.rs
crates/bar/src/bar/notifications/: mod.rs
crates/bar/src/bar/taskbar/: mod.rs  niri_window_widget.blp  widgets.rs
crates/bar/src/player/: mod.rs
crates/bar/src/popups/: mod.rs
crates/bar/src/popups/bluetooth/: bluetooth.blp  device.blp  device.rs  mod.rs
crates/bar/src/popups/clock/: clock.blp  mod.rs  weather.blp  weather.rs
crates/bar/src/popups/launcher/: folder_button.blp  folder_button.rs  image.rs  mod.rs
crates/bar/src/popups/mediaplayer/: mediaplayer.blp  mod.rs
crates/bar/src/popups/notifications/: item.blp  item.rs  notification.blp  notification.rs
crates/bar/src/popups/volume/: device.blp  device.rs  mod.rs  volume.blp
crates/bar/src/shell/: notifications.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/icons/: Cargo.toml  build.rs
crates/icons/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/providers/app/: Cargo.toml
crates/launcher/providers/app/src/: lib.rs
crates/launcher/providers/calc/: Cargo.toml
crates/launcher/providers/calc/src/: lib.rs
crates/launcher/providers/common/: Cargo.toml
crates/launcher/providers/common/src/: lib.rs  runtime_handle.rs
crates/launcher/src/: backdrop.rs  candidate.rs  candidate_row.blp  candidate_row.rs  dbus.rs  launcher.blp  launcher.rs  main.rs  window.rs
crates/launcher/src/candidate_row/: candidate_row.blp  mod.rs
crates/niri-client/: Cargo.toml
crates/niri-client/src/: lib.rs
crates/process-guard/: Cargo.toml
crates/process-guard/src/: lib.rs
crates/workspace-hack/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
nix/home-manager/: subniri.nix
src/: icons.rs  main.rs  style.css
src/bar/: bluetooth.rs  clock.rs  mod.rs  volume.rs
src/bar/notifications/: mod.rs  notifications.blp
src/bar/taskbar/: mod.rs  niri.rs  niri_workspace_widget.blp  widgets.rs
src/popups/bluetooth/: device.rs
src/popups/clock/: weather.rs
src/popups/launcher/: image.rs  launcher.blp  mod.rs
src/popups/mediaplayer/: mod.rs
src/popups/notifications/: item.blp  item.rs  mod.rs  notification.blp  notification.rs
src/popups/volume/: device.rs
src/shell/: notifications.rs
systemd/user/: subniri-bar.service  subniri-launcher.service  subniri.target
systemd/user-dev/: subniri-dev-bar.service  subniri-dev-launcher.service  subniri-dev.target
