[package]
name = "niribar"
version = "0.1.0"
edition = "2024"

[dependencies]
astal-notifd.workspace = true
astal4.workspace = true
bar = { path = "./crates/bar" }
clap.workspace = true
gtk4.workspace = true
icons.workspace = true

[workspace]
members = ["crates/*"]

[workspace.dependencies]
astal-apps = "0.1.0"
astal-bluetooth = "0.1.0"
astal-io = { version = "0.1.0", features = ["gio_v2_80"] }
astal-mpris = "0.1.0"
astal-network = "0.1.0"
astal-wp = "0.1.0"
astal4 = { version = "0.1.0", features = ["gio_v2_80", "gtk_v4_22", "v4_22"] }
async-channel = "2.5.0"
async-stream = "0.3.6"
bimap = "0.6.3"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
dirs = "6.0.0"
futures = "0.3.31"
glib = { version = "0.21.5", features = ["v2_86"] }
gtk4 = { version = "0.10.3", features = ["blueprint", "gio_v2_80", "v4_20"] }
icons = { path = "./crates/icons" }
lazy-regex = { version = "3.4.2", features = ["std"] }
nm-rs = "0.1.3"
niri-client = { path = "./crates/niri-client" }
niri-ipc = "25.11.0"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.2"
urlencoding = "2.1.3"
which = "8.0.0"
glycin = { version = "3.0.7", features = ["gdk4"] }
astal-bluetooth-sys = "0.1.0"
libgweather = "4.6.0"
astal-notifd = "0.1.0"
system_shutdown = "4.1.0"
astal-tray = "0.1.0"
glib-build-tools = "0.21.0"
heck = "0.5.0"
