[package]
name = "bar"
version = "0.1.0"
edition = "2024"

[dependencies]
astal-apps.workspace = true
astal-bluetooth.workspace = true
astal-bluetooth-sys.workspace = true
astal-io.workspace = true
astal-mpris.workspace = true
astal-network.workspace = true
astal-notifd.workspace = true
astal-tray.workspace = true
astal-wp.workspace = true
astal4.workspace = true
async-channel.workspace = true
async-stream.workspace = true
dirs.workspace = true
futures.workspace = true
glib.workspace = true
glycin.workspace = true
gtk4.workspace = true
icons.workspace = true
lazy-regex.workspace = true
libgweather.workspace = true
niri-client.workspace = true
nm-rs.workspace = true
rand.workspace = true
strum.workspace = true
sysinfo.workspace = true
system_shutdown.workspace = true
urlencoding.workspace = true

[build-dependencies]
glib-build-tools.workspace = true
