[package]
name = "bar"
version.workspace = true
edition.workspace = true
autobins = false

[[bin]]
name = "polarbar"
path = "src/main.rs"

[dependencies]
astal-apps.workspace = true
astal-bluetooth-sys.workspace = true
astal-bluetooth.workspace = true
astal-io.workspace = true
astal-mpris.workspace = true
astal-network.workspace = true
astal-notifd.workspace = true
astal-tray.workspace = true
astal-wp.workspace = true
astal4.workspace = true
async-channel.workspace = true
async-stream.workspace = true
dirs.workspace = true
futures.workspace = true
glib.workspace = true
glycin.workspace = true
gtk4.workspace = true
icons.workspace = true
lazy-regex.workspace = true
libgweather.workspace = true
niri-client.workspace = true
nm-rs.workspace = true
process-guard.workspace = true
rand.workspace = true
strum.workspace = true
sysinfo.workspace = true
system_shutdown.workspace = true
urlencoding.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
zbus.workspace = true
async-broadcast.workspace = true

[build-dependencies]
glib-build-tools.workspace = true
